--- a/doc/tang.8
+++ b/doc/tang.8
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "TANG" "8" "June 2017" "" ""
+.TH "TANG" "8" "March 2018" "ff" ""
 .
 .SH "NAME"
 \fBtang\fR \- Network\-Based Cryptographic Binding Server
@@ -117,7 +117,7 @@ The Tang server provides no public commands\.
 Nathaniel McCallum <npmccallum@redhat\.com>
 .
 .SH "SEE ALSO"
-\fBsystemd\.unit\fR(5), \fBsystemd\.socket\fR(5), \fBjose\-jwk\-gen\fR(1)
+\fBsystemd\.unit\fR(5), \fBsystemd\.socket\fR(5), \fBjose\-jwk\-gen\fR(1), \fBtang\-show\-keys\fR(1)
 .
 .SH "FURTHER READING"
 .
