--- a/doc/tang.8.adoc
+++ b/doc/tang.8.adoc
@@ -1,7 +1,12 @@
-tang(8) -- Network-Based Cryptographic Binding Server
-=====================================================
+tang(8)
+=======
+:doctype: manpage
 
-## OVERVIEW
+== NAME
+
+tang - Network-Based Cryptographic Binding Server
+
+== OVERVIEW
 
 Tang is a service for binding cryptographic keys to network presence. It
 offers a secure, stateless, anonymous alternative to key escrow services.
@@ -31,7 +36,7 @@ components. For an off-the-shelf automated encryption framework with support
 for Tang, see the Clevis project. For the full technical details of the Tang
 protocol, see the Tang project's homepage.
 
-## GETTING STARTED
+== GETTING STARTED
 
 Getting a Tang server up and running is simple:
 
@@ -40,14 +45,14 @@ Getting a Tang server up and running is simple:
 That's it. The server is now running with a fresh set of cryptographic keys
 and will automatically start on the next reboot.
 
-## CONFIGURATION
+== CONFIGURATION
 
 Tang intends to be a minimal network service and therefore does not have any
 configuration. To adjust the network settings, you can override the
-`tangd.socket` unit file using the standard systemd mechanisms. See
-`systemd.unit`(5) and `systemd.socket`(5) for more information.
+*tangd.socket* unit file using the standard systemd mechanisms. See
+link:systemd.unit.5.adoc[*systemd.unit*(5)] and link:systemd.socket.5.adoc[*systemd.socket*(5)] for more information.
 
-## KEY ROTATION
+== KEY ROTATION
 
 In order to preserve the security of the system over the long run, you need to
 periodically rotate your keys. The precise interval at which you should rotate
@@ -55,14 +60,14 @@ depends upon your application, key sizes and institutional policy. For some
 common recommendations, see: https://www.keylength.com.
 
 To rotate keys, first we need to generate new keys in the key database
-directory. This is typically `/var/db/tang`. For example, you can create
+directory. This is typically */var/db/tang*. For example, you can create
 new signature and exchange keys with the following commands:
 
     # DB=/var/db/tang
     # jose jwk gen -i '{"alg":"ES512"}' -o $DB/new_sig.jwk
     # jose jwk gen -i '{"alg":"ECMR"}' -o $DB/new_exc.jwk
 
-Next, rename the old keys to have a leading `.` in order to hide them from
+Next, rename the old keys to have a leading *.* in order to hide them from
 advertisement:
 
     # mv $DB/old_sig.jwk $DB/.old_sig.jwk
@@ -76,7 +81,7 @@ clients have been migrated to use the new keys, you can remove the old keys.
 Be aware that removing the old keys while clients are still using them can
 result in data loss. You have been warned.
 
-## HIGH PERFORMANCE
+== HIGH PERFORMANCE
 
 The Tang protocol is extremely fast. However, in the default setup we
 use systemd socket activiation to start one process per connection. This
@@ -89,10 +94,10 @@ through your existing web services using a connection pool. Since there is one
 process per connection, keeping a number of connections open in this setup
 will enable effective parallelism since there are no internal locks in Tang.
 
-For Apache, this is possible using the `ProxyPass` directive of the `mod_proxy`
+For Apache, this is possible using the *ProxyPass* directive of the *mod_proxy*
 module.
 
-## HIGH AVAILABILITY
+== HIGH AVAILABILITY
 
 Tang provides two methods for building a high availability deployment.
 
@@ -107,7 +112,7 @@ Instead, clients should be coded with the ability to bind to multiple Tang
 servers. In this setup, each Tang server will have its own keys and clients
 will be able to decrypt by contacting a subset of these servers.
 
-Clevis already supports this workflow through its `sss` plugin.
+Clevis already supports this workflow through its *sss* plugin.
 
 However, if you still feel that key sharing is the right deployment strategy,
 Tang will do nothing to stop you. Just (securely!) transfer all the contents
@@ -115,19 +120,22 @@ of the database directory to all your servers. Make sure you don't forget the
 unadvertised keys! Then set up DNS round-robin so that clients will be load
 balanced across your servers.
 
-## COMMANDS
+== COMMANDS
 
 The Tang server provides no public commands.
 
-## AUTHOR
+== AUTHOR
 
-Nathaniel McCallum &lt;npmccallum@redhat.com&gt;
+Nathaniel McCallum <npmccallum@redhat.com>
 
-## SEE ALSO
+== SEE ALSO
 
-`systemd.unit`(5), `systemd.socket`(5), `jose-jwk-gen`(1), `tang-show-keys`(1)
+link:systemd.unit.5.adoc[*systemd.unit*(5)],
+link:systemd.socket.5.adoc[*systemd.socket*(5)],
+link:jose-jwk-gen.1.adoc[*jose-jwk-gen*(1)],
+link:tang-show-keys.1.adoc[*tang-show-keys*(1)]
 
-## FURTHER READING
+== FURTHER READING
 
 * Clevis    : https://github.com/latchset/clevis
 * Tang      : https://github.com/latchset/tang
